# MI_music

./: .eslintrc.cjs  .gitignore  README.md  WAITING_FOR_USER_TESTING.md  index.html  lyrics-window.html  package.json  pnpm-lock.yaml  tmp-main-shot.txt  vite.config.ts
.github/workflows/: release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
artifacts/window-validation/: jiyu-music.sample.txt  native-resize-summary.json
docs/: AUTO_UPDATE.md  SETTINGS.md  WINDOW_MCP_VALIDATION.md
scripts/: mcp_bridge_client.mjs  validate_window_resize.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  qq_auth.rs
src-tauri/src/api/: helpers.rs  kugou.rs  kuwo.rs  migu.rs  mod.rs  netease.rs  qq.rs  source.rs
src-tauri/src/commands/: app.rs  db.rs  default_sources.rs  download.rs  effects.rs  lyrics.rs  lyrics_window.rs  mod.rs  playback_cache.rs  player.rs  script_runtime.rs  search.rs  theme.rs  user_source.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_add_download_file_path.sql  003_playlist_library_metadata.sql  004_imported_playlist_sync.sql  005_playback_cache.sql  006_playback_cache_actual_quality.sql
src-tauri/src/db/models/: download.rs  mod.rs  playback_cache.rs  playlist.rs  settings.rs  song.rs
src-tauri/src/download/: mod.rs
src-tauri/src/effects/: equalizer.rs  mod.rs  reverb.rs
src-tauri/src/lyrics/: mod.rs  parser.rs  sync.rs
src-tauri/src/lyrics_window/: window.rs
src-tauri/src/player/: audio.rs  mod.rs  state.rs
src-tauri/src/script_runtime/: api.rs  manager.rs  mod.rs
src-tauri/src/types/: mod.rs  user_source.rs
src-tauri/src/utils/: mod.rs
src/components/: DesktopLyricsControl.vue  DesktopLyricsExample.vue  SongItem.vue
src/composables/: useAppBootstrap.ts  useAppliedSettings.ts  useDesktopLyrics.ts  useLyricsSync.ts  useMusicUrlResolver.ts  useNavItems.ts  useScriptRuntime.ts  useTheme.ts  useTrackDownload.ts
src/lib/: motion.ts  playbackSource.ts  sourceHealth.ts  trackQuality.ts
src/lyrics-window/: LyricsWindow.vue  main.ts
src/plugins/: naive-ui.ts
src/router/: index.ts
src/services/: tvNavigation.ts
src/store/: appUpdate.ts  download.ts  effects.ts  index.ts  player.ts  playlist.ts  playlistSearch.ts  search.ts  settings.ts  theme.ts  uiMode.ts
src/stores/: userSource.ts
src/themes/: index.ts
(+89 files in other folders)
