[package]
name = "jiyu-music"
version = "0.1.4"
description = "Jiyu Music Desktop Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-stream = "0.1"
url = "2.5"
async-trait = "0.1"
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
lazy_static = "1.4"
rodio = { version = "0.17", features = ["wav", "mp3", "flac"], optional = true }
regex = "1"
md5 = "0.7"
tauri-plugin-mcp-bridge = { version = "0.9", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
dev-tools = ["tauri-plugin-mcp-bridge"]
